--- a/pages/company/style.css
+++ b/pages/company/style.css
@@ -120,3 +120,15 @@
   font-size: 14px;
 
 }
+
+/* 
+  ?: ------------------------------------------------------------------------------------------------------------
+  ?: RESPONSIVE
+  ?: ------------------------------------------------------------------------------------------------------------
+*/
+
+@media screen and (max-width: 1100px) {
+  .content{
+    width: 100%;
+  }
+}
