--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,8 +1,13 @@
 .nav-lateral {
     height: 100%;
-    width: 34%;
-    padding-left: 5em;
+    width: 25%;
+    padding: 0 2em;
+    border-left: 1px solid rgb(230, 230, 230);
 }
+
+/* .nav-lateral-list{
+    position: fixed;
+} */
 
 .nav-lateral-list p {
     width: 100%;
