--- a/style.css
+++ b/style.css
@@ -220,7 +220,7 @@ main h2 {
 }
 
 .about__more a:hover {
-  background: rgb(51, 51, 51);
+  background: #000;
   color: #fff;
   transition: all .5s ease-in-out;
 }
@@ -435,7 +435,7 @@ main h2 {
 }
 
 .contacts__second-section__first-column {
-  background: #D4AB01;
+  background: #000;
   border-radius: 1em 0 0 1em;
 }
 
@@ -449,18 +449,23 @@ main h2 {
   display: block;
   border-radius: 3px;
   box-sizing: border-box;
-  background-color: #1f2022;
-  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
+  background-color: #D4AB01;
   border: none;
   resize: none;
 
   font: inherit;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: normal;
-  color: #d1d2d2;
+  color: #000;
 
   width: 100%;
   padding: 20px;
+}
+
+.contacts__second-section__first-column input::placeholder,
+.contacts__second-section__first-column textarea::placeholder {
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 700;
 }
 
 .contacts__second-section__first-column input {
@@ -476,9 +481,9 @@ main h2 {
 
 .contacts__second-section__first-column button {
   cursor: pointer;
-  color: #fff;
+  color: #000;
   border-radius: 3px;
-  background-color: #111;
+  background-color: #D4AB01;
   border: 0;
   padding: 15px 50px;
   font-weight: bold;
@@ -498,7 +503,7 @@ main h2 {
 
 .contacts__second-section__first-column h2 {
   font-size: 2em;
-  color: #000;
+  color: #D4AB01;
   font-weight: 300;
   text-align: left;
 }
