--- a/pages/about/style.css
+++ b/pages/about/style.css
@@ -100,6 +100,20 @@ html {
   height: 100%;
 }
 
+.social a {
+  padding: 4px 7px;
+  text-align: right;
+  color: #000;
+  margin-bottom: 1em;
+  font-size: 2em;
+}
+
+.social a:hover {
+  color: #D4AB01;
+  background: #000;
+  border-radius: 8px;
+}
+
 .content {
   width: 65%;
   padding: 0 5em;
