--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -5,9 +5,21 @@
     border-left: 1px solid rgb(230, 230, 230);
 }
 
-/* .nav-lateral-list{
-    position: fixed;
-} */
+.nav-lateral-list h2 {
+    position: relative;
+    text-align: left;
+    padding-bottom: 10px;
+}
+
+.nav-lateral-list h2:before{
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 1px;
+    bottom: 0;
+    left: 0%;
+    border-bottom: 5px solid #D4AB01;
+}
 
 .nav-lateral-list p {
     width: 100%;
@@ -16,7 +28,7 @@
 
 .card {
     padding: 1.5em;
-    border-bottom: 1px solid rgba(33, 33, 33, 0.6);
+    border-top: 1px solid rgba(33, 33, 33, 0.6);
     transition: box-shadow .3s;
     cursor: pointer;
 }
