Sidebar design fix.

--- a/pages/dignities/style.css
+++ b/pages/dignities/style.css
@@ -73,16 +73,17 @@
 */
 
 .container {
-  width: 80%;
+  width: 90%;
   /* max-width: 850px; */
-  margin: 0 auto;
+  margin: 2em auto;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
 
 .content{
-  width: 63%;
+  width: 65%;
+  padding: 0 5em;
 }
 
 .container h2 {
