--- a/pages/about/style.css
+++ b/pages/about/style.css
@@ -74,12 +74,12 @@ html {
 .container {
   /* border: 2px solid #000; */
   /* background: greenyellow; */
-  width: 100%;
+  width: 90%;
   /* max-width: 850px; */
   margin: 2em auto;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   flex-wrap: wrap;
 }
 
