--- a/pages/company/style.css
+++ b/pages/company/style.css
@@ -71,13 +71,12 @@
 }
 
 .container {
-  width: 80%;
+  width: 90%;
   /* max-width: 850px; */
-  margin: 0 auto;
-  margin-bottom: 2em;
+  margin: 2em auto;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   flex-wrap: wrap;
 }
 
@@ -94,13 +93,14 @@
 }
 
 .content {
-  width: 66%;
+  width: 65%;
+  padding: 0 5em;
 }
 
 .image1,
 .image2 {
   width: 100%;
-  height: 80%;
+  height: auto;
   margin-bottom: 2em;
 }
 
