--- a/css/header.css
+++ b/css/header.css
@@ -21,8 +21,8 @@
 
 .wrapper {
     z-index: 100;
-    background: var(--color3);
-    position: fixed;
+    background: var(--color);
+    /* position: fixed; */
     width: 100%;
     padding: 15px 20px;
     transition: all 0.5s ease;
@@ -115,6 +115,7 @@
 }
 
 .wrapper__container {
+    z-index: 100;
     display: flex;
     align-items: center;
     height: 100%;
