--- a/style.css
+++ b/style.css
@@ -16,11 +16,45 @@ body {
   height: 100%;
 }
 
+.first-decoration {
+  position: absolute;
+  width: 6em;
+  height: 6em;
+  background: #e2b70b;
+  left: 6em;
+}
+
+.second-decoration {
+  position: absolute;
+  width: 2em;
+  height: 20em;
+  background: #000;
+  right: 10em;
+}
+
+.third-decoration {
+  position: absolute;
+  width: 6em;
+  height: 6em;
+  background: #e2b70b;
+  right: 6em;
+  bottom: 15em;
+}
+
+.fourth-decoration {
+  position: absolute;
+  width: 2em;
+  height: 20em;
+  background: #000;
+  left: 10em;
+  bottom: 15em;
+}
+
 .swiper {
   /* padding-top: 6em; */
   display: flex;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 65%;
   justify-content: center;
   cursor: pointer;
 }
@@ -81,6 +115,7 @@ body {
 }
 
 .welcome {
+  display: none;
   position: absolute;
   left: 25%;
   top: 40%;
@@ -682,6 +717,20 @@ footer {
 */
 
 @media screen and (max-width: 1100px) {
+
+  /* Swiper */
+
+  .swiper {
+    width: 100%;
+    height: 55%;
+  }
+
+  .first-decoration,
+  .second-decoration,
+  .third-decoration,
+  .fourth-decoration {
+    display: none;
+  }
 
   .blockquote,
   .about,
