--- a/pages/dignities/style.css
+++ b/pages/dignities/style.css
@@ -19,7 +19,7 @@
 /* Slideshow container */
 .slideshow-container {
   z-index: 1;
-  background: url("../../img/3.jpg");
+  background: url("../../img/fundacion.jpg");
   /* background: #000; */
   background-position: center;
   background-size: cover;
@@ -33,14 +33,15 @@
 }
 
 .slideshow-container::before {
+  z-index: 2;
   content: "";
   position: absolute;
-  top: 0;
+  top: 1.57em;
   right: 0;
   bottom: 0;
   left: 0;
   height: 20rem;
-  background-color: MidnightBlue;
+  background-color: #000;
   opacity: 0.3;
 }
 
