--- a/pages/history/style.css
+++ b/pages/history/style.css
@@ -122,7 +122,7 @@
   padding: 0;
 }
 
-.port > * {
+.port>* {
   opacity: 0;
   -webkit-transition: all 0.5s linear;
   -moz-transition: all 0.5s linear;
@@ -138,7 +138,7 @@
   transition: all 0.4s ease-in-out;
 }
 
-.port > * {
+.port>* {
   opacity: 1;
   -webkit-transition-delay: 0.5s;
   transition-delay: 0.5s;
@@ -165,6 +165,7 @@
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
+
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,600,700");
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Montserrat+Alternates|Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
@@ -175,23 +176,23 @@
 
 
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'Roboto', sans-serif;
-text-decoration: none;
-list-style: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  text-decoration: none;
+  list-style: none;
 }
 
 html {
-scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 :target:before {
-content: "";
-display: block;
-height: 100px;
-margin: -100px 0 0;
+  content: "";
+  display: block;
+  height: 100px;
+  margin: -100px 0 0;
 }
 
 /* 
@@ -202,23 +203,37 @@ TODO: --------------------------------------------------------------------------
 
 /* Slideshow container */
 .slideshow-container {
-z-index: 1;
-background: url("../../img/3.jpg");
-/* background: #000; */
-background-position: center;
-background-size: cover;
-background-repeat: no-repeat;
-color: var(--color);
-padding-top: 8rem;
-/* max-width: 1000px; */
-height: 20rem;
-text-align: center;
-font-size: 4rem;
+  z-index: 1;
+  background: url("../../img/3.jpg");
+  /* background: #000; */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: var(--color);
+  padding-top: 8rem;
+  /* max-width: 1000px; */
+  height: 20rem;
+  text-align: center;
+  font-size: 4rem;
+}
+
+.slideshow-container::before {
+  z-index: 2;
+  content: "";
+  position: absolute;
+  top: 1.57em;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 20rem;
+  background-color: #000;
+  opacity: 0.3;
 }
 
 .slideshow-container p {
-/* color: #000; */
-opacity: 1;
+  z-index: 3;
+  /* color: #000; */
+  opacity: 1;
 }
 
 /* 
@@ -228,85 +243,85 @@ TODO: --------------------------------------------------------------------------
 */
 
 .main {
-display: flex;
-flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .container h2 {
-margin-top: 0.5em;
-margin-bottom: 0.5em;
-/* Aumentar el tamaño del texto */
-font-size: 2rem;
-line-height: 1.6em;
-text-align: center;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  /* Aumentar el tamaño del texto */
+  font-size: 2rem;
+  line-height: 1.6em;
+  text-align: center;
 }
 
 .container {
-/* border: 2px solid #000; */
-/* background: greenyellow; */
-width: 80%;
-/* max-width: 850px; */
-margin: 2em auto;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-wrap: wrap;
+  /* border: 2px solid #000; */
+  /* background: greenyellow; */
+  width: 80%;
+  /* max-width: 850px; */
+  margin: 2em auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .container p,
 h2 {
-/* font-family: 'Special Elite', cursive; */
-font-family: "Charter", sans-serif;
-font-size: 20px;
-margin-bottom: 1.5em;
-/* Margen Inferior en los Párrafos */
-text-align: justify;
-line-height: 28px;
+  /* font-family: 'Special Elite', cursive; */
+  font-family: "Charter", sans-serif;
+  font-size: 20px;
+  margin-bottom: 1.5em;
+  /* Margen Inferior en los Párrafos */
+  text-align: justify;
+  line-height: 28px;
 }
 
 .content {
-width: 66%;
+  width: 66%;
 }
 
 .content-list {
-/* position: fixed; */
-/* top: 50%; */
-/* right: 0; */
-border: 1px solid rgba(51, 51, 51, 0.5);
-/* background: #f4f6fa; */
-/* transform: translateY(-50%); */
+  /* position: fixed; */
+  /* top: 50%; */
+  /* right: 0; */
+  border: 1px solid rgba(51, 51, 51, 0.5);
+  /* background: #f4f6fa; */
+  /* transform: translateY(-50%); */
 }
 
 .content-list a {
-font-weight: 300;
-font-size: 20px;
-color: #111;
+  font-weight: 300;
+  font-size: 20px;
+  color: #111;
 }
 
 .content-list li {
-padding: 8px;
+  padding: 8px;
 }
 
 .nav-lateral {
-height: 100%;
-width: 34%;
-padding-left: 5em;
+  height: 100%;
+  width: 34%;
+  padding-left: 5em;
 }
 
 .nav-lateral-list p {
-width: 100%;
-font-size: 17px;
+  width: 100%;
+  font-size: 17px;
 }
 
 .card {
-padding: 1.5em;
-border-bottom: 1px solid rgba(33, 33, 33, 0.6);
-transition: box-shadow .3s;
-cursor: pointer;
+  padding: 1.5em;
+  border-bottom: 1px solid rgba(33, 33, 33, 0.6);
+  transition: box-shadow .3s;
+  cursor: pointer;
 }
 
 .card:hover {
-box-shadow: 0 0 11px rgb(11 11 11 / 50%);
+  box-shadow: 0 0 11px rgb(11 11 11 / 50%);
 }
 
 /* 
@@ -316,16 +331,16 @@ box-shadow: 0 0 11px rgb(11 11 11 / 50%);
 */
 
 @media screen and (max-width: 1100px) {
-.container {
-  width: 90%;
-}
+  .container {
+    width: 90%;
+  }
 
-.content,
-.nav-lateral{
-  width: 100%;
-}
+  .content,
+  .nav-lateral {
+    width: 100%;
+  }
 
-.nav-lateral{
-  padding-left: 0;
-}
+  .nav-lateral {
+    padding-left: 0;
+  }
 }
