--- a/pages/about/style.css
+++ b/pages/about/style.css
@@ -24,12 +24,19 @@ html {
 
 /* 
   TODO: -------------------------------------------------------------------------------------------------------------
-  TODO: DISEÑO CAROUSEL
+  TODO: DESIGN BANNER
   TODO: -------------------------------------------------------------------------------------------------------------
 */
 
+.banner {
+  position: relative;
+  width: 100%;
+  height: 20em;
+  background: #000;
+}
+
 /* Slideshow container */
-.slideshow-container {
+.banner-container {
   z-index: 1;
   background: url("../../img/fundacion.jpg");
   /* background: #000; */
@@ -37,18 +44,17 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   color: var(--color);
-  padding-top: 8rem;
+  /*  */
   /* max-width: 1000px; */
   height: 20rem;
   text-align: center;
   font-size: 4rem;
 }
 
-.slideshow-container::before {
+.banner-container::before {
   z-index: 2;
   content: "";
   position: absolute;
-  top: 1.57em;
   right: 0;
   bottom: 0;
   left: 0;
@@ -57,9 +63,26 @@ html {
   opacity: 0.3;
 }
 
-.slideshow-container p {
-  /* color: #000; */
-  opacity: 1;
+.banner-container p {
+  z-index: 3;
+  position: relative;
+  padding-top: 2em;
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+  color: #e2b70b;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+}
+
+.banner__decoration {
+  position: absolute;
+  z-index: 4;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-image: -webkit-linear-gradient(top, transparent 0%, #ffffff 100%);
+  background-image: linear-gradient(to bottom, transparent 0%, #ffffff 100%);
 }
 
 /* 
@@ -142,7 +165,7 @@ html {
   margin: 0 1em 1em 1em;
 }
 
-.content-list a:hover{
+.content-list a:hover {
   padding-left: 1em;
 }
 
