--- a/pages/history/style.css
+++ b/pages/history/style.css
@@ -197,31 +197,37 @@ html {
 
 /* 
 TODO: -------------------------------------------------------------------------------------------------------------
-TODO: DISEÑO CAROUSEL
+TODO: DESIGN BANNER
 TODO: -------------------------------------------------------------------------------------------------------------
 */
 
+.banner {
+  position: relative;
+  width: 100%;
+  height: 20em;
+  background: #000;
+}
+
 /* Slideshow container */
-.slideshow-container {
+.banner-container {
   z-index: 1;
-  background: url("../../img/3.jpg");
+  background: url("../../img/fundacion.jpg");
   /* background: #000; */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: var(--color);
-  padding-top: 8rem;
+  /*  */
   /* max-width: 1000px; */
   height: 20rem;
   text-align: center;
   font-size: 4rem;
 }
 
-.slideshow-container::before {
+.banner-container::before {
   z-index: 2;
   content: "";
   position: absolute;
-  top: 1.57em;
   right: 0;
   bottom: 0;
   left: 0;
@@ -230,10 +236,27 @@ TODO: --------------------------------------------------------------------------
   opacity: 0.3;
 }
 
-.slideshow-container p {
+.banner-container p {
   z-index: 3;
-  /* color: #000; */
-  opacity: 1;
+  position: relative;
+  padding-top: 2em;
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+  color: #e2b70b;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+}
+
+.banner__decoration {
+  display: none;
+  position: absolute;
+  z-index: 4;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-image: -webkit-linear-gradient(top, transparent 0%, #ffffff 100%);
+  background-image: linear-gradient(to bottom, transparent 0%, #ffffff 100%);
 }
 
 /* 
