--- a/pages/workshop/style.css
+++ b/pages/workshop/style.css
@@ -19,12 +19,19 @@
 
 /* 
   TODO: -------------------------------------------------------------------------------------------------------------
-  TODO: DISEÑO CAROUSEL
+  TODO: DESIGN BANNER
   TODO: -------------------------------------------------------------------------------------------------------------
 */
 
+.banner {
+  position: relative;
+  width: 100%;
+  height: 20em;
+  background: #000;
+}
+
 /* Slideshow container */
-.slideshow-container {
+.banner-container {
   z-index: 1;
   background: url("../../img/fundacion.jpg");
   /* background: #000; */
@@ -32,18 +39,17 @@
   background-size: cover;
   background-repeat: no-repeat;
   color: var(--color);
-  padding-top: 8rem;
+  /*  */
   /* max-width: 1000px; */
   height: 20rem;
   text-align: center;
   font-size: 4rem;
 }
 
-.slideshow-container::before {
+.banner-container::before {
   z-index: 2;
   content: "";
   position: absolute;
-  top: 1.57em;
   right: 0;
   bottom: 0;
   left: 0;
@@ -52,15 +58,26 @@
   opacity: 0.3;
 }
 
-.slideshow-container p {
+.banner-container p {
+  z-index: 3;
   position: relative;
-  /* padding: 15% 0 10%; */
+  padding-top: 2em;
   max-width: 640px;
   margin-left: auto;
   margin-right: auto;
-  color: var(--color);
+  color: #e2b70b;
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-  font-family: "Montserrat", sans-serif;
+}
+
+.banner__decoration {
+  position: absolute;
+  z-index: 4;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background-image: -webkit-linear-gradient(top, transparent 0%, #ffffff 100%);
+  background-image: linear-gradient(to bottom, transparent 0%, #ffffff 100%);
 }
 
 /* 
