--- a/css/footer.css
+++ b/css/footer.css
@@ -113,9 +113,10 @@ footer {
 .about-company__third-column input,
 .about-company__third-column textarea {
   display: block;
+  outline: none;
   border-radius: 3px;
   box-sizing: border-box;
-  background-color: #1f2022;
+  background-color: #D4AB01;
   box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
   border: none;
   resize: none;
@@ -123,10 +124,16 @@ footer {
   font: inherit;
   font-size: 14px;
   font-weight: normal;
-  color: #d1d2d2;
+  color: #000;
 
   width: 100%;
   padding: 20px;
+}
+
+.about-company__third-column input::placeholder,
+.about-company__third-column textarea::placeholder {
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 700;
 }
 
 .about-company__third-column input {
