--- a/pages/company/style.css
+++ b/pages/company/style.css
@@ -59,6 +59,7 @@
   margin-left: auto;
   margin-right: auto;
   color: #e2b70b;
+  font-weight: 700;
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
 }
 
