--- a/pages/gallery/style.css
+++ b/pages/gallery/style.css
@@ -74,6 +74,70 @@ header .categorias a.activo {
 	color: #000;
 }
 
+/* 
+  TODO: -------------------------------------------------------------------------------------------------------------
+  TODO: DESIGN BANNER
+  TODO: -------------------------------------------------------------------------------------------------------------
+*/
+
+.banner {
+	position: relative;
+	width: 100%;
+	height: 20em;
+	background: #000;
+}
+
+/* Slideshow container */
+.banner-container {
+	z-index: 1;
+	background: url("../../img/fundacion.jpg");
+	/* background: #000; */
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	color: var(--color);
+	/*  */
+	/* max-width: 1000px; */
+	height: 20rem;
+	text-align: center;
+	font-size: 4rem;
+}
+
+.banner-container::before {
+	z-index: 2;
+	content: "";
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	height: 20rem;
+	background-color: #000;
+	opacity: 0.3;
+}
+
+.banner-container p {
+	z-index: 3;
+	position: relative;
+	padding-top: 2em;
+	max-width: 640px;
+	margin-left: auto;
+	margin-right: auto;
+	color: #e2b70b;
+	font-weight: 700;
+	text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+}
+
+.banner__decoration {
+	position: absolute;
+	z-index: 4;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100px;
+	background-image: -webkit-linear-gradient(top, transparent 0%, #ffffff 100%);
+	background-image: linear-gradient(to bottom, transparent 0%, #ffffff 100%);
+}
+
 /* ------------------------- */
 /* Grid */
 /* ------------------------- */
