--- a/css/header.css
+++ b/css/header.css
@@ -23,8 +23,10 @@
     z-index: 100;
     background: var(--color3);
     /* position: fixed; */
+    position: relative;
     width: 100%;
     padding: 15px 20px;
+    transform: translateY(0%);
     transition: all 0.5s ease;
 }
 
@@ -74,10 +76,18 @@
     font-size: 16px;
 }
 
-.wrapper-active {
+.wrapper-active-intermediate {
     background: var(--color);
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.8);
     padding: 0px 0px;
+    transform: translateY(-200%);
+    transition: all 0.5s ease;
+}
+
+.wrapper-active {
+    position: fixed;
+    transform: translateY(0%);
+    transition: all 0.5s ease;
 }
 
 .wrapper-active .wrapper__logo {
