--- a/pages/history/style.css
+++ b/pages/history/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap');
+@import url('https://db.onlinewebfonts.com/c/bc584c6f1f3371bec3c04f1ee4d7a782?family=Arial+Nova+Light');
+
 .row {
   width: 100%;
   max-width: 1170px;
@@ -249,7 +253,6 @@ TODO: --------------------------------------------------------------------------
 }
 
 .banner__decoration {
-  display: none;
   position: absolute;
   z-index: 4;
   bottom: 0;
