--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,9 @@
 :root {
     /* --color: #E1C44D; */
     --color2: #000;
-    --color3: rgba(212, 171, 1, 0.7);
+    --color3: #E1C44D;
+    /* --color3: #e2b70b; */
+    /* --color3: rgba(212, 171, 1, 0.7); */
     --color: #D4AB01;
 }
 
@@ -77,7 +79,7 @@
 }
 
 .wrapper-active-intermediate {
-    background: var(--color);
+    /* background: var(--color); */
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.8);
     padding: 0px 0px;
     transform: translateY(-200%);
