--- a/pages/start/register/style.css
+++ b/pages/start/register/style.css
@@ -163,7 +163,7 @@ main {
   border: 0;
   border-radius: 3px;
   color: #D4AB01;
-  background: rgb(41, 41, 41);
+  background: #000;
   width: auto;
   padding: 8px;
   transition: .5s;
@@ -171,7 +171,7 @@ main {
 
 #container__register:hover {
   background: #D4AB01;
-  color: rgb(41, 41, 41);
+  color: #000;
   cursor: pointer;
   transition: .5s;
 }
@@ -277,7 +277,7 @@ main {
   border: 0;
   border-radius: 3px;
   color: #D4AB01;
-  background: rgb(41, 41, 41);
+  background: #000;
   width: auto;
   padding: 8px;
   transition: .5s;
@@ -285,7 +285,7 @@ main {
 
 .modal__container__end:hover {
   background: #D4AB01;
-  color: rgb(41, 41, 41);
+  color: #000;
   cursor: pointer;
   transition: .5s;
 }
