--- a/pages/start/style.css
+++ b/pages/start/style.css
@@ -8,13 +8,14 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   text-decoration: none;
+  
 }
 
 main {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100vh; 
 }
 
 .login {
@@ -121,7 +122,7 @@ main {
   padding: 8px 12px;
   outline: none;
   border: 0;
-  color: #fff;
+  color: #E1C44D;
   border-radius: 4px;
   background: rgb(41, 41, 41);
   /* font-family: "Nunito", sans-serif; */
@@ -131,7 +132,7 @@ main {
 
 .input-button:hover {
   color: rgb(41, 41, 41);
-  background: #D4AB01;
+  background: #E1C44D;
   /* opacity: .8; */
 }
 
